# ats-pipeline

./: .gitignore  Makefile  PROJECT_SELECTION_FEATURE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/plans/: gui_fixes_and_skills_analysis_enhancements_8f6ca3b1.plan.md  strict_bullet_and_skill_controls_8386e6bb.plan.md
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: dependencies.py  main.py
backend/app/models/: analytics.py  experience.py  jobs.py  projects.py  resumes.py  skills.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/experience/: AddExperienceDialog.tsx  EditExperienceDialog.tsx  ExperienceForm.tsx  ExperienceList.tsx
frontend/components/jobs/: AddJobDialog.tsx  GoogleSheetsSync.tsx  JobDetailsPanel.tsx  JobList.tsx
frontend/components/layout/: sidebar.tsx
frontend/components/projects/: AddProjectDialog.tsx  EditProjectDialog.tsx  ProjectForm.tsx  ProjectList.tsx
frontend/components/skills/: AISkillSuggestions.tsx  AddSkillDialog.tsx  EditSkillDialog.tsx  SkillsByCategory.tsx
resumes/resume_2025-12-28_05-30-55/: NVIDIA_ASIC_Hardware_Design_Engineer_New_College_Grad_2025.json
scripts/: convert_latex_to_json.py  validate.py
src/: __init__.py
src/approval/: __init__.py  interactive_approval.py
src/cli/: __init__.py  github_commands.py  main.py
src/compilation/: __init__.py  bullet_feedback.py  bullet_scorer.py  bullet_validator.py  content_optimizer.py  resume_rewriter.py
src/db/: __init__.py  database.py  schema.py
src/extractors/: __init__.py  bullet_formatter.py  dependency_parser.py  github_api.py  github_repo_extractor.py  job_skills.py  job_url_scraper.py  readme_parser.py
src/generators/: cover_letter_generator.py
src/github/: __init__.py  workflow.py
src/gui/: __init__.py  analytics_page.py  approval_workflow.py  experience_section.py  job_details.py  job_helpers.py  job_input.py  job_list.py  jobs_page.py  main_window.py  projects_section.py  resume_diff.py  resume_preview.py  resume_template_section.py  resumes_page.py  skills_section.py
src/matching/: __init__.py  job_similarity.py  resume_reuse_checker.py  skill_matcher.py
src/models/: __init__.py  job.py  resume.py  skills.py
src/parsers/: __init__.py  latex_resume.py
src/projects/: __init__.py  project_library.py  project_selector.py
src/rendering/: __init__.py  latex_renderer.py
src/storage/: __init__.py  experience_library.py  resume_manager.py
src/sync/: __init__.py  google_sheets_client.py  sheet_sync.py
src/utils/: ats_keyword_tracker.py  skill_ai_assistant.py  skill_categorizer.py
templates/: resume.tex
tests/: __init__.py  conftest.py
tests/integration/: test_analytics_tracking.py  test_time_to_apply.py
(+50 files in other folders)
